--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'fabric-loom' version '1.3-SNAPSHOT'
     id 'maven-publish'
+//    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 version = project.mod_version
@@ -36,13 +37,16 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    // https://mvnrepository.com/artifact/org.springframework/spring-context
-    implementation 'org.springframework:spring-context:6.0.11'
+    modImplementation 'org.springframework:spring-context:6.0.11'
+    modImplementation 'org.springframework:spring-core:6.0.11'
+    modImplementation 'org.springframework:spring-beans:6.0.11'
 
-    // https://mvnrepository.com/artifact/org.springframework/spring-core
-    implementation 'org.springframework:spring-core:6.0.11'
-// https://mvnrepository.com/artifact/org.springframework/spring-beans
-    implementation 'org.springframework:spring-beans:6.0.11'
+    include 'org.springframework:spring-context:6.0.11'
+    include 'org.springframework:spring-core:6.0.11'
+    include 'org.springframework:spring-beans:6.0.11'
+    include 'org.springframework:spring-aop:6.0.11'
+    include 'org.springframework:spring-expression:6.0.11'
+    include 'org.springframework:spring-jcl:6.0.11'
 }
 
 processResources {
